tests/NormalTests/paczka1/fuzzy1/61624801.err
Error in line 1: eHbHX2 S400 87,1
Error in line 2: RlJ7ojcvzTi S428 47,7
Error in line 4: eHbHX2 S428 13,3
Error in line 15: xJ1ytMF8e S428 62,3
Error in line 23: RlJ7ojcvzTi S428 42,2
